force-app/main/default/objects/Purchase_Indent__c/Purchase_Indent__c.object-meta.xml
<CustomObject>
    <label>Purchase Indent</label>
    <nameField>
        <displayFormat>PIN-{000000}</displayFormat>
        <label>Purchase Indent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Indents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>