force-app/main/default/objects/Purchase_Indent__c/fields/Against__c.field-meta.xml
<CustomField>
    <fullName>Against__c</fullName>
    <label>Against</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>