force-app/main/default/objects/Purchase_Indent__c/fields/Indent_By__c.field-meta.xml
<CustomField>
    <fullName>Indent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Indents</relationshipName>
    <type>Lookup</type>
</CustomField>