force-app/main/default/objects/Purchase_Indent__c/fields/Indent_Date__c.field-meta.xml
<CustomField>
    <fullName>Indent_Date__c</fullName>
    <label>Indent Date</label>
    <type>Date</type>
</CustomField>