force-app/main/default/objects/Purchase_Indent__c/fields/Indent_No__c.field-meta.xml
<CustomField>
    <fullName>Indent_No__c</fullName>
    <displayFormat>PPLH{000}PIN</displayFormat>
    <label>Indent No</label>
    <type>AutoNumber</type>
</CustomField>