force-app/main/default/objects/Purchase_Indent__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <label>Procurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>