force-app/main/default/objects/Purchase_Indent__c/fields/Purchase_Indent_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Indent_Number__c</fullName>
    <formula>if(
	text( Ware_House__r.City__c ) == &apos;Kolkata&apos;, 
	&apos;PPLCU&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;PIN&apos;+RIGHT( Name , LEN(Name) - 4),
	if( text(Ware_House__r.City__c) == &apos;Gurugram&apos;, 
		&apos;PPLHO&apos;+RIGHT(text(YEAR( DATEVALUE(CreatedDate))), 
		 LEN(text(YEAR( DATEVALUE(CreatedDate)))) - 2)+&apos;PIN&apos;+RIGHT( Name , LEN(Name) - 4),
		&apos;Please select Branch Office .&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Indent Number</label>
    <type>Text</type>
</CustomField>