force-app/main/default/objects/Purchase_Indent__c/fields/Reference_No_text__c.field-meta.xml
<CustomField>
    <fullName>Reference_No_text__c</fullName>
    <label>Reference No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>