force-app/main/default/objects/Purchase_Indent__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <label>Terms and Conditions</label>
    <type>TextArea</type>
</CustomField>