force-app/main/default/objects/Purchase_Indent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Indent_Date__c</columns>
    <columns>Ware_House__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>