force-app/main/default/objects/Purchase_Indent__c/listViews/Draft_Indents.listView-meta.xml
<ListView>
    <fullName>Draft_Indents</fullName>
    <columns>NAME</columns>
    <columns>Indent_Date__c</columns>
    <columns>Ware_House__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Indents</label>
    <sharedTo>
        <group>East_Parts_Team</group>
        <group>North_Parts_Team</group>
    </sharedTo>
</ListView>